calfSystem.css
#fshSpinner {
  float: right;
  margin: 0 160px 0 0;
}

#fshFindOnlinePlayers {
  width: 120px;
  float: right;
  margin: 0 100px 0 0;
  padding: 0;
}

#content {max-width:600px}

.column {
  float: left;
  width: 180px;
  margin-right: 5px;
}

.column h3 {
  background: #e0e0e0;
  font: bold 13px Arial;
  margin: 0 0 5px 0;
}

.column ul {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

div#helperMenuDiv {
  cursor: default;
  text-decoration: none;
  display: none;
  text-align: center;
  position: absolute;
  color: black;
  font-size: 12px;
  -moz-border-radius: 5px;
  -webkit-border-radius: 5px;
  border:3px solid #cb7;
  z-index: 1
}

div#helperMenuDiv .a-reply {
  cursor: pointer;
  text-decoration: underline;
}

div#helperMenu {
  position: absolute;
  top: 0px;
  left: 0px;
  color: yellow;
  font-weight: bold;
  cursor: pointer;
  text-decoration: underline;
  z-index: 100;
  text-align: center;
  white-space: nowrap;
}

div#fshQuickLinks {
  position: absolute;
  cursor: pointer;
  text-decoration: underline;
  z-index: 1;
  text-align: left;
  white-space: nowrap;
  color: black;
  font-size: 12px;
  border-radius: 5px;
  -moz-border-radius: 5px;
  -webkit-border-radius: 5px;
  border: 3px solid #cb7;
  width: 100px;
}

.no-close .ui-dialog-titlebar-close {
  display: none;
}

.HelperAdvisorRow1 {background-color:#e7c473;font-size:x-small}
.HelperAdvisorRow1:hover {background-color:white}
.HelperAdvisorRow2 {background-color:#e2b960;font-size:x-small}
.HelperAdvisorRow2:hover {background-color:white}

.HelperMonsterLogRow1 {background-color:#e7c473;font-size:small}
.HelperMonsterLogRow1:hover {background-color:white}
.HelperMonsterLogRow2 {background-color:#e2b960;font-size:small}
.HelperMonsterLogRow2:hover {background-color:white}

.HelperTextLink {color:blue;font-size:x-small;cursor:pointer;}
.HelperTextLink:hover {text-decoration:underline;}

.HelperTableRow1 {background-color:#e7c473;font-size:small}
.HelperTableRow1:hover {background-color:white}
.HelperTableRow2 {background-color:#e2b960;font-size:small}
.HelperTableRow2:hover {background-color:white}

.fastWear {
  cursor:pointer;
  text-decoration:underline;
  color:blue;
  position: relative;
  top: -20%;
}

.fastWorn {
  color:green;
  font-weight:bold;
}

.fastUse {
  cursor:pointer;
  text-decoration:underline;
  color:blue;
  position: relative;
  top: -20%;
}

.reportLink {cursor:pointer; text-decoration:underline; color:blue;}
.fshLink {cursor:pointer; text-decoration:underline;}

.fshRed       {color: red;}
.fshBlue      {color: blue;}
.fshGreen     {color: green;}
.fshNavy      {color: navy;}
.fshMaroon    {color: maroon;}
.fshWhite     {color: white;}

.fshCommon    {color: white;}
.fshRare      {color: #0099ff;}
.fshUnique    {color: #cc33ff;}
.fshLegendary {color: #ffff00;}
.fshSuper     {color: #ff0000;}
.fshCrystal   {color: #6633ff;}
.fshEpic      {color: #00cc00;}

.fshCenter    {text-align: center;}
.fshRight     {text-align: right;}
.fshHide      {display: none;}
.fshWearHide  {display: none;}
.fshInline    {display: inline;}
.fshNoWrap    {white-space: nowrap;}
.helperQC     {cursor: pointer;}

.bsT          {margin: 0px auto;}
.bsT td       {text-align: right; padding:0px 4px;}

.qbT          {margin: 0px auto;}
.qbTH         {text-align: center; padding:0px 4px; color:orange;}
.qbTD         {text-align: center; padding:0px 4px;}
div#quickbuff div#players h1 {float: left;}
div#quickbuff div#players p {clear: both;}
.fshLastActivity {color: #ccc; font-size: x-small;}

div#quickbuff div.buff-block p label.fshDim span {
  color: #999;
}

.profile-stat-bonus {font-size: x-small;}

#minibox-enemy {
  margin: 0 0 10px;
  overflow: hidden
}
#fshResetEnemy {
  font-size: xx-small;
  cursor: pointer;
  text-decoration: underline;
}
#enemy-send-message {background-position: -198px -80px;}
#enemy-quickbuff {background-position: -210px -80px;}
#enemy-secure-trade {background-position: -222px -80px;}
#enemy-trade {background-position: -234px -80px;}
.player-row {white-space: nowrap}
#enemy-quick-buff {
  clear: both;
  text-align: center;
  font-size: 11px;
  margin: 0;
  padding-top: 5px;
  color: #F7EAC9;
  text-decoration: underline;
  cursor: pointer;
}
.enemy-buff-check-on,
.enemy-buff-check-off {
  display: inline-block;
  width: 12px;
  height: 12px;
  margin: 0 1px 2px 0;
  vertical-align: bottom;
  background: transparent url('http://cdn.fallensword.com/media/dist/img/ui/ui.png');
}
.enemy-buff-check-off {
  background-position: -246px -80px;
}
.enemy-buff-check-on {
  background-position: -270px -80px;
}

table#fshBazaar {font-size: x-small;}
table#fshBazaar span#warning {color: red; font-size: small}

table.relicT {font-size:small;}
table.relicT tr.hidden {display:none; visibility:hidden;}
table.relicT td {font-size:x-small; text-align: right;}
table.relicT td.brn {color:brown;}
table.relicT td.grey {color:grey;}
table.relicT td.headr {font-size:small;border-top:2px black solid;}

img.center {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

td.lvlHighlight {background-color:#4671C8;}

span#fshRefresh {
  text-decoration: underline;
  cursor: pointer;
}

div#fshCompConf {
  position: relative;
  top: -16px;
  text-align: right;
  padding-right: 38px;
}

table.fshInvFilter {width: 100%;}
table.fshInvFilter th {background-color: #cd9e4b;}

.fshNumberInput {width: 3em;}


/*
 * Table styles
 */
table.dataTable {
  width: 100%;
  margin: 0 auto;
  clear: both;
  border-collapse: separate;
  border-spacing: 0;
  font-size:x-small;
  /*
   * Header and footer styles
   */
  /*
   * Body styles
   */
}
/*
table.dataTable thead th,
table.dataTable tfoot th {
  font-weight: bold;
}
*/
table.dataTable thead th,
table.dataTable thead td {
/*  padding: 10px 18px;
  border-bottom: 1px solid #111;*/
  background-color:#cd9e4b;
  padding:0px;
  border: 0;
/*
  font-weight: normal;
*/
  text-decoration: underline;
}
/* ... */

